# voice-agent

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  features.py  main.py  persona.py  pipeline.py
backend/app/adapters/llm/: base.py  gemma.py
backend/app/adapters/stt/: base.py  deepgram.py
backend/app/adapters/tts/: base.py  cartesia.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo
frontend/src/: main.tsx
frontend/src/app/: App.tsx  Sidebar.tsx
frontend/src/config/: brand.ts
frontend/src/lib/: rtc.ts
frontend/src/sections/ExperienceBot/: index.tsx
frontend/src/sections/stubs/: StubSection.tsx
frontend/src/styles/: globals.css
frontend/src/themes/: ThemeContext.tsx  index.ts
tasks/: lessons.md  todo.md
